[gd_scene load_steps=3 format=3 uid="uid://c7jqm8vx1234a"]

[ext_resource type="Script" path="res://scenes/rewards/rewards.gd" id="1_rewards"]
[ext_resource type="PackedScene" path="res://scenes/cards/card.tscn" id="2_card"]

[node name="root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rewards")
card_scene = ExtResource("2_card")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "VITÃ“RIA!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoldLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 200.0
offset_right = 150.0
offset_bottom = 250.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Ouro ganho: +50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChooseCardLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 300.0
offset_right = 300.0
offset_bottom = 360.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Escolha uma carta:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardChoices" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -150.0
offset_right = 600.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="SkipButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 28
text = "Pular Recompensa"

[node name="ContinueButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 28
text = "Continuar"
